--- a/Mplayer.html
+++ b/Mplayer.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <title>Multi Player</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
+
 <body>
-    <p> <a href = "caract.html"> Caracterização </a> </p>
-    
+    <p> <a href="caract.html"> Caracterização </a> </p>
+
 
 </body>
+
 </html>
