--- a/index.html
+++ b/index.html
@@ -1,15 +1,68 @@
 <!DOCTYPE html>
 <html>
+    <style type="text/css">
+    <!-- 
+    #navbar ul {
+        margin: 0;
+        padding: 5px;
+        list-style-type: none;
+        text-align: center;
+        background-color: #000;
+    }
+
+    #navbar ul li {
+        display: inline;
+    }
+
+    #navbar ul li a {
+        text-decoration: none;
+        padding: .2em 1em;
+        color: #fff;
+        background-color: #000;
+    }
+
+    #navbar ul li a:hover {
+        color: #000;
+        background-color: #fff;
+    }
+
+
+    </style>
     <head>
-        <title>
-            Página Inicial
-        </title>
-    </head>
- <body>
-     <p> <a href="info.html">Info</a>
-     <p> <a href="jogo.html">Jogo</a> </p>
-     <p> <a href ="home.html"> ágina Inicial</a> </p>
-     <p> <a href ="login.html">Login</a> </p>
-     <p> <a href ="score.html">Tabela de Resultados</a></p>
- </body>   
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <meta charset="UTF-8">
+        <title>Página Inicial</title>
+        
+        
+        </head>
+    <body><!--NavBar Tutorial: https: //www.makeuseof.com/responsive-navigation-bar-using-html-and-css/
+    -->
+        <nav class="navbar">
+            <ul class="nav-links">
+                <!-- Para o móvel -->
+                <input type="checkbox" id="checkbox_toggle" />
+                <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+                <!--Items-->
+                <div class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="info.html">Info</a></li>
+                    <li><a href="jogo.html">Jogo</a></li>
+                    <li><a href="score.html">Scoreboard</a></li>
+                    <li class="services">
+                        <!-- DROPDOWN EXEMPLO -->
+                        <a href="/">Dropdown Exemplo</a>
+                        <ul class="dropdown">
+                            <li><a href="/">Dropdown 1 </a></li>
+                            <li><a href="/">Dropdown 2</a></li>
+                            <li><a href="/">Dropdown 2</a></li>
+                            <li><a href="/">Dropdown 3</a></li>
+                            <li><a href="/">Dropdown 4</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="login.html">Login</a></li>
+                </div>
+            </ul>
+        </nav>
+    </body>
+
 </html>
