--- a/info.html
+++ b/info.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
+
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+
+
     <meta charset="UTF-8">
     <title>Informações</title>
-    <style>
-        .button {
-            background-color: yellow;
-            border: none;
-            color: black;
-            padding: 10px 25px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 4px;
-            cursor: pointer;
-            border-radius: 8px;
-          }
-        </style>
-</head>
-<body>
-    <p> <a href="jogo.html"> Jogo </a> </p>
-    <p> <a href = "index.html"> Página Inicial </a> </p>
 
-   <p> <b> Regras: </b> </p> 
-   <p> O tabuleiro é dividido em células, com as minas distribuídas aleatoriamente.  Clicar em uma célula que não tem nenhuma mina revela um número, este número é a quantidade de células vizinhas que contêm uma mina. Usando essas informações, determina as células que são seguras e as que contêm minas. As células suspeitas de estarem minadas podem ser marcadas com uma bandeira usando o botão direito do rato.</p>
-   <p> <b> Como ganhar: </b> </p> 
-   <p> Para vencer, tens que abrir todas as células que não contêm minas.</p>
-   <br>
-   Estás pronto? <br>
-   <!--Botão para jogar -->
+</head>
+
+<body>
+    <!--NAVBAR-->
+    <nav class="navbar">
+        <ul class="nav-links">
+            <!-- Para o móvel -->
+            <input type="checkbox" id="checkbox_toggle" />
+            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+            <!--Items-->
+            <div class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="info.html">Info</a></li>
+                <li><a href="jogo.html">Jogo</a></li>
+                <li><a href="score.html">Scoreboard</a></li>
+                <li class="services">
+                    <!-- DROPDOWN EXEMPLO -->
+                    <a href="/">Dropdown Exemplo</a>
+                    <ul class="dropdown">
+                        <li><a href="/">Dropdown 1 </a></li>
+                        <li><a href="/">Dropdown 2</a></li>
+                        <li><a href="/">Dropdown 2</a></li>
+                        <li><a href="/">Dropdown 3</a></li>
+                        <li><a href="/">Dropdown 4</a></li>
+                    </ul>
+                </li>
+                <li><a href="login.html">Login</a></li>
+            </div>
+        </ul>
+    </nav>
+    <!--FIM NAVBAR-->
+
+    <p> <b> Regras: </b> </p>
+    <p> O tabuleiro é dividido em células, com as minas distribuídas aleatoriamente. Clicar em uma célula que não tem nenhuma mina revela um número, este número é a quantidade de células vizinhas que contêm uma mina. Usando essas informações, determina as
+        células que são seguras e as que contêm minas. As células suspeitas de estarem minadas podem ser marcadas com uma bandeira usando o botão direito do rato.</p>
+    <p> <b> Como ganhar: </b> </p>
+    <p> Para vencer, tens que abrir todas as células que não contêm minas.</p>
+    <br> 
+    <p> Estás pronto? </p>
+    <br>
+    <!--Botão para jogar -->
     <div style="text-align:center">
         <button class="button" onclick="window.location.href='jogo.html'">Jogar</button>
     </div>
@@ -38,4 +58,5 @@
 
 
 </body>
+
 </html>
