--- a/login.html
+++ b/login.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
+
 <body>
+
+    <nav class="navbar">
+        <ul class="nav-links">
+            <!-- Para o móvel -->
+            <input type="checkbox" id="checkbox_toggle" />
+            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+            <!--Items-->
+            <div class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="info.html">Info</a></li>
+                <li><a href="jogo.html">Jogo</a></li>
+                <li><a href="score.html">Scoreboard</a></li>
+                <li class="services">
+                    <!-- DROPDOWN EXEMPLO -->
+                    <a href="/">Dropdown Exemplo</a>
+                    <ul class="dropdown">
+                        <li><a href="/">Dropdown 1 </a></li>
+                        <li><a href="/">Dropdown 2</a></li>
+                        <li><a href="/">Dropdown 2</a></li>
+                        <li><a href="/">Dropdown 3</a></li>
+                        <li><a href="/">Dropdown 4</a></li>
+                    </ul>
+                </li>
+                <li><a href="login.html">Login</a></li>
+            </div>
+        </ul>
+    </nav>
     
-    <p> <a href = "index.html"> Página Inicial </a> </p>
-    <div id="coisadelogin"> 
-        <label for = "Username">Username:
+    <div id="coisadelogin">
+        <label for="Username">Username:
         </label>
-        <input type = "text" id= "username" name = "username">
+        <input type="text" id="username" name="username">
     </div>
-    <div id="coisadelogin2"> 
-        <label for = "pass">Palavra-Passe (mínimo 6 caracteres): 
+    <div id="coisadelogin2">
+        <label for="pass">Palavra-Passe (mínimo 6 caracteres): 
         </label>
-        <input type = "password" id= "pass" name = "password" minlength="6" required>
+        <input type="password" id="pass" name="password" minlength="6" required>
     </div>
-    <p> <a href = "newUser.html"> Criar Conta </a> </p>
-    <p> <a href = "jogo.html"> Jogar </a> </p>
-    <input type = "submit" value = "Entrar" >
-    
+    <p> <a href="newUser.html"> Criar Conta </a> </p>
+    <p> <a href="jogo.html"> Jogar </a> </p>
+    <input type="submit" value="Entrar">
+
 
 </body>
+
 </html>
