Added labels and stuff

--- a/info.html
+++ b/info.html
@@ -51,7 +51,7 @@
     <br>
     <!--Botão para jogar -->
     <div style="text-align:center">
-        <button class="button" onclick="window.location.href='jogo.html'">Jogar</button>
+        <button class="button test" onclick="window.location.href='jogo.html'">Jogar</button>
     </div>
 
 
