Forms para Login+Registar+Recuperar Password

--- a/jogo.html
+++ b/jogo.html
@@ -98,10 +98,10 @@
             Altura do Campo
         </div>
         <div class="label">
-            Largura do campo
+            Largura do Campo
         </div>
         <div class="label">
-            Número de bombas
+            Número de Bombas
         </div>
 </body>
 
