--- a/registar.html
+++ b/registar.html
@@ -37,20 +37,24 @@
         </ul>
     </nav>
 
-    <div class="LoginBox">
+    <div class="LoginBox" ">
         <p class="Title">Login</p>
         <form class="form1">
             <input class="InputBox" type="text" placeholder="Username">
             <br> <br>
+            <input class="InputBox" type="text" placeholder="E-Mail">
+            <br> <br>
             <input class="InputBox" type="password" placeholder="Password">
-            <br> <br><br>
+            <br> <br>
+            <input class="InputBox" type="password" placeholder="Repetir Password">
+            <br> <br>
+            <br>
             <a class="submit">Entrar</a>
             <br> <br> <br> 
-            <p ><a href="forgot.html">Esqueceste-te da Password?</p>
-            <br> <br>  
+        
             <p >
-               <a style="color: black;" >  Ainda não tens uma conta?  </a><br>
-                <a href="registar.html"> Registar </a>
+               <a style="color: black;" >  Já tens uma conta?  </a><br>
+                <a href="login.html"> Login </a>
             </p>
             <br>
     </div>
