--- a/score.html
+++ b/score.html
@@ -38,7 +38,33 @@
 <!--FIM NAVBAR-->
 
 <p>Scoreboard</p>
+<table> <tr> 
+    <th>Nome do Jogador:</th>
+     <th>Nº de pontos:</th> 
+     <th>Tempo passado:</th> 
+    </tr> 
+    <tr> 
+        <td>Jogador 1</td>
+        <td> 999</td> 
+        <td>160 segundos</td> 
+    </tr> 
+    <tr> 
+        <td>Jogador 2</td> 
+        <td> 888</td>
+        <td>1600 segundos</td>
+    </tr> 
+    <tr>
+        <td>Jogador 3</td> 
+        <td> 777</td>
+        <td>6000 segundos</td> 
+    </tr> 
+    <tr> 
+        <td>Jogador 4</td>
+        <td> 666</td>
+        <td>3333333 segundos</td> 
 
+    </tr>
+</table>
 </body>
 
 </html>
