--- a/info.html
+++ b/info.html
@@ -54,7 +54,9 @@
         <button class="button test" onclick="window.location.href='jogo.html'">Jogar</button>
     </div>
 
+<audio src="assets/audio/01. BG Cave.mp3" controls>
 
+</audio>
 
 
 </body>
