--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
                 </div>
             </ul>
         </nav>
+
+    <h1> Bem-vindo! </h1>
+    <div id = "quote">
+        <q> Admit it. None of us know how to play Minesweeper.
+            We just click randoms boxes and hope for the best. </q>
+    </div>
+    <p> Nesta página vais encontrar as <a href="./info.html">regras</a> de como jogar Minesweeper! </p>
+    <p> Tens a possibilidade de jogar individualemente ou desafiar alguém para jogar contigo! </p>
+    <p> Do que estás à espera?? </p>
+    <!--Botão para jogar -->
+    <div style="text-align:center">
+        <button class="button test" onclick="window.location.href='jogo.html'">Jogar</button>
+    </div>
+
+
     </body>
+
 
 </html>
