correções de pt

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             We just click randoms boxes and hope for the best. </q>
     </div>
     <p> Nesta página vais encontrar as <a href="./info.html">regras</a> de como jogar Minesweeper! </p>
-    <p> Tens a possibilidade de jogar individualemente ou desafiar alguém para jogar contigo! </p>
+    <p> Tens a possibilidade de jogar individualmente ou desafiar alguém para jogar contigo! </p>
     <p> Do que estás à espera?? </p>
     <!--Botão para jogar -->
     <div style="text-align:center">
-        <button class="button test" onclick="window.location.href='jogo.html'">Jogar</button>
+        <button class="button test" onclick="window.location.href='jogo.html'">Bora lá!!</button>
     </div>
 
 
