--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
     <div style="text-align:center">
         <button class="button test" onclick="window.location.href='jogo.html'">Bora lá!!</button>
     </div>
-
+    <figure>
+        <img src = "https://64.media.tumblr.com/3fc0534025a90092e3e0748f131ffe2d/1206b76caf3118b7-7f/s540x810/2989b54570df31793a00f82937323705c6618080.jpg"
+             alt = "Meme de Minesweepwer"
+             height="200">
+    </figure>
 
     </body>
 
