--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 
     <h1> Bem-vindo! </h1>
     <div id = "quote">
-        <q> Admit it. None of us know how to play Minesweeper.
-            We just click randoms boxes and hope for the best. </q>
+        <blockquote>
+            <p> Admit it. None of us know how to play Minesweeper.</p>
+            <p> We just click randoms boxes and hope for the best.</p>
+        </blockquote>
     </div>
     <p> Nesta página vais encontrar as <a href="./info.html">regras</a> de como jogar Minesweeper! </p>
     <p> Tens a possibilidade de jogar individualmente ou desafiar alguém para jogar contigo! </p>
@@ -81,7 +83,12 @@
              alt = "Meme de Minesweepwer"
              height="200">
     </figure>
+    <!--
+    <video controls>
+        <source scr = "https://www.youtube.com/watch?v=GrZCWx0fnfc">
 
+
+    </video>-->
     </body>
 
 
