--- a/registar.html
+++ b/registar.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Registar</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/login.css">
 </head>
@@ -37,8 +37,8 @@
         </ul>
     </nav>
 
-    <div class="LoginBox" ">
-        <p class="Title">Login</p>
+    <div class="LoginBox">
+        <p class="Title">Registar</p>
         <form class="form1">
             <input class="InputBox" type="text" placeholder="Username">
             <br> <br>
