imagens em comentario e new folder

--- a/index.html
+++ b/index.html
@@ -51,18 +51,44 @@
     <div style="text-align:center">
         <button class="button test" onclick="window.location.href='jogo.html'">Bora lá!!</button>
     </div>
-    <figure>
-        <img src = "https://64.media.tumblr.com/3fc0534025a90092e3e0748f131ffe2d/1206b76caf3118b7-7f/s540x810/2989b54570df31793a00f82937323705c6618080.jpg"
-             alt = "Meme de Minesweepwer"
-             height="300">
-    </figure>
-    <div>
-        <p>SpeedRun num campo com 99 minas: </p>
+
+    <!--
+    <div class="gallery">
+        <a target="_blank" href="https://64.media.tumblr.com/3fc0534025a90092e3e0748f131ffe2d/1206b76caf3118b7-7f/s540x810/2989b54570df31793a00f82937323705c6618080.jpg">
+            <img src = "https://64.media.tumblr.com/3fc0534025a90092e3e0748f131ffe2d/1206b76caf3118b7-7f/s540x810/2989b54570df31793a00f82937323705c6618080.jpg"
+                 alt = "Meme de Minesweepwer 1"
+                 height="320">
+        </a>
+    </div>
+    <div class="gallery">
+        <a target="_blank" href="./media/Meme2.jpg">
+            <img src = "./media/Meme2.jpg"
+                 alt = "Meme de Minesweepwer 2"
+                 height="300">
+        </a>
+    </div>
+    <div class="gallery">
+        <a target="_blank" href="./media/Meme3.jpg">
+            <img src = "./media/Meme3.jpg"
+                 alt = "Meme de Minesweepwer 3"
+                 height="300">
+        </a>
+    </div><div class="gallery">
+        <a target="_blank" href="./media/Meme4.jpg">
+            <img src = "./media/Meme4.jpg"
+                 alt = "Meme de Minesweepwer 4"
+                 height="300">
+        </a>
+    </div>
+-->
+
+
+
         <iframe width="560" height="315" src="https://www.youtube.com/embed/GrZCWx0fnfc"
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
         </iframe>
-    </div>
+
     </body>
 
 
