--- a/info.html
+++ b/info.html
@@ -54,8 +54,8 @@
         <button class="button test" onclick="window.location.href='jogo.html'">Jogar</button>
     </div>
 
-<audio src="assets/audio/01. BG Cave.mp3" controls>
-
+<audio controls autoplay>
+    <source src="assets/audio/01. BG Cave.mp3" type="audio/mpeg">
 </audio>
 
 
