--- a/info.html
+++ b/info.html
@@ -54,9 +54,9 @@
         <button class="button test" onclick="window.location.href='jogo.html'">Jogar</button>
     </div>
 
-<audio controls autoplay>
-    <source src="assets/audio/01. BG Cave.mp3" type="audio/mpeg">
-</audio>
+    <audio controls>
+        <source src="assets/audio/01. BG Cave.mp3" type="audio/mpeg">
+    </audio>
 
 
 </body>
