--- a/info.html
+++ b/info.html
@@ -50,11 +50,11 @@
     <p> Estás pronto? </p>
     <br>
     <!--Botão para jogar -->
-    <div style="text-align:center">
+    <div id = "playbutton" style="text-align:center">
         <button class="button test" onclick="window.location.href='jogo.html'">Jogar</button>
     </div>
 
-    <audio controls>
+    <audio class = "audio" controls>
         <source src="assets/audio/01. BG Cave.mp3" type="audio/mpeg">
     </audio>
 
