--- a/SPlayer.html
+++ b/SPlayer.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <title>Single Player</title>
+    <link rel =  "stylesheet" href="css/redher.css">
 </head>
 <body>
+<div id = "cell1">
+
+</div>
+<div id = "cell2">
+
+</div>
+<div id = "cell3">
+
+</div>
+<div id = "cell4">
+
+</div>
 
 
 </body>
