--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@ mask-repeat: false;
         </nav>
 
     <h1> Bem-vindo! </h1>
-    <div id = "quote">
-        <blockquote>
-            <p> Admit it. None of us know how to play Minesweeper.</p>
-            <p> We just click randoms boxes and hope for the best.</p>
-        </blockquote>
+    <div class = "quote">
+            <blockquote>
+                <p> Admit it. None of us know how to play Minesweeper.
+                    We just click randoms boxes and hope for the best.</p>
+            </blockquote>
+
     </div>
     <p> Nesta página vais encontrar as <a href="./info.html">regras</a> de como jogar Minesweeper! </p>
     <p> Tens a possibilidade de jogar individualmente ou desafiar alguém para jogar contigo! </p>
