--- a/SPlayer.html
+++ b/SPlayer.html
@@ -7,17 +7,64 @@
     <link rel =  "stylesheet" href="css/redher.css">
 </head>
 <body>
-<div id = "cell1">
+<div id = "line1">
+    <div id = "cell11">
+
+    </div>
+    <div id = "cell12">
+
+    </div>
+    <div id = "cell13">
+
+    </div>
+    <div id = "cell14">
+
+    </div>
 
 </div>
-<div id = "cell2">
+<div id = "line2">
+    <div id = "cell21">
+
+    </div>
+    <div id = "cell22">
+
+    </div>
+    <div id = "cell23">
+
+    </div>
+    <div id = "cell24">
+
+    </div>
 
 </div>
-<div id = "cell3">
+<div id = "line3">
+    <div id = "cell31">
+
+    </div>
+    <div id = "cell32">
+
+    </div>
+    <div id = "cell33">
+
+    </div>
+    <div id = "cell34">
+
+    </div>
 
 </div>
-<div id = "cell4">
+<div id = "line4">
+    <div id = "cell41">
 
+    </div>
+    <div id = "cell42">
+
+    </div>
+    <div id = "cell43">
+
+    </div>
+    <div id = "cell44">
+
+    </div>
 </div>
 
 
