--- a/index.html
+++ b/index.html
@@ -32,36 +32,36 @@ mask-repeat: false;
                 <div class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="info.html">Info</a></li>
-                    <li><a href="jogo.html">Jogo</a></li>
+                    <!--  <li><a href="jogo.html">Jogo</a></li>-->
                     <li><a href="score.html">Scoreboard</a></li>
                     <li class="services">
                         <!-- DROPDOWN EXEMPLO -->
-                        <a href="/">Dropdown Exemplo</a>
+                        <a href="/">Jogo</a>
                         <ul class="dropdown">
-                            <li><a href="/">Dropdown 1 </a></li>
-                            <li><a href="/">Dropdown 2</a></li>
-                            <li><a href="/">Dropdown 2</a></li>
+                            <li><a href="./SPlayer.html">Singleplayer</a></li>
+                            <li><a href="./Mplayer.html">Multiplayer</a></li>
+                            <!--<li><a href="/">Dropdown 2</a></li>
                             <li><a href="/">Dropdown 3</a></li>
-                            <li><a href="/">Dropdown 4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="login.html">Login</a></li>
-                </div>
-            </ul>
-        </nav>
+                            <li><a href="/">Dropdown 4</a></li> -->
+                          </ul>
+                      </li>
+                      <li><a href="login.html">Login</a></li>
+                  </div>
+              </ul>
+          </nav>
 
-    <h1> Bem-vindo! </h1>
-    <div class = "quote">
-            <blockquote>
-                <p> Admit it. None of us know how to play Minesweeper.
-                    We just click randoms boxes and hope for the best.</p>
-            </blockquote>
+      <h1> Bem-vindo! </h1>
+      <div class = "quote">
+              <blockquote>
+                  <p> Admit it. None of us know how to play Minesweeper.
+                      We just click randoms boxes and hope for the best.</p>
+              </blockquote>
 
-    </div>
-    <p> Nesta página vais encontrar as <a href="./info.html">regras</a> de como jogar Minesweeper! </p>
-    <p> Tens a possibilidade de jogar individualmente ou desafiar alguém para jogar contigo! </p>
-    <p> Do que estás à espera?? </p>
-    <!--Botão para jogar -->
+      </div>
+      <p> Nesta página vais encontrar as <a href="./info.html">regras</a> de como jogar Minesweeper! </p>
+      <p> Tens a possibilidade de jogar individualmente ou desafiar alguém para jogar contigo! </p>
+      <p> Do que estás à espera?? </p>
+      <!--Botão para jogar -->
     <div style="text-align:center">
         <button class="button test" onclick="window.location.href='jogo.html'">Bora lá!!</button>
     </div>
