--- a/SPlayer.html
+++ b/SPlayer.html
@@ -7,6 +7,7 @@
     <link rel =  "stylesheet" href="css/redher.css">
 </head>
 <body>
+    <p>Palavra teste</p>
 <div id = "line1">
     <div id = "cell11">
 
