--- a/info.html
+++ b/info.html
@@ -22,17 +22,17 @@
             <div class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="info.html">Info</a></li>
-                <li><a href="jogo.html">Jogo</a></li>
+                <!--  <li><a href="jogo.html">Jogo</a></li>-->
                 <li><a href="score.html">Scoreboard</a></li>
                 <li class="services">
                     <!-- DROPDOWN EXEMPLO -->
-                    <a href="/">Dropdown Exemplo</a>
+                    <a href="/">Jogo</a>
                     <ul class="dropdown">
-                        <li><a href="/">Dropdown 1 </a></li>
-                        <li><a href="/">Dropdown 2</a></li>
-                        <li><a href="/">Dropdown 2</a></li>
+                        <li><a href="./SPlayer.html">Singleplayer</a></li>
+                        <li><a href="./Mplayer.html">Multiplayer</a></li>
+                        <!--<li><a href="/">Dropdown 2</a></li>
                         <li><a href="/">Dropdown 3</a></li>
-                        <li><a href="/">Dropdown 4</a></li>
+                        <li><a href="/">Dropdown 4</a></li> -->
                     </ul>
                 </li>
                 <li><a href="login.html">Login</a></li>
