nav bar atualizada

--- a/SPlayer.html
+++ b/SPlayer.html
@@ -32,7 +32,7 @@
             <li><a href="score.html">Scoreboard</a></li>
             <li class="services">
                 <!-- DROPDOWN EXEMPLO -->
-                <a href="/">Jogo</a>
+                <a href="./jogo.html">Jogo</a>
                 <ul class="dropdown">
                     <li><a href="./SPlayer.html">Singleplayer</a></li>
                     <li><a href="./Mplayer.html">Multiplayer</a></li>
