--- a/score.html
+++ b/score.html
@@ -9,7 +9,7 @@
 
 <body>
   <!--NAVBAR-->
-  < <nav class="navbar">
+  <nav class="navbar">
       <ul class="nav-links">
           <!-- Para o móvel -->
           <input type="checkbox" id="checkbox_toggle" />
@@ -22,7 +22,7 @@
               <li><a href="score.html">Scoreboard</a></li>
               <li class="services">
                   <!-- DROPDOWN EXEMPLO -->
-                  <a href="/">Jogo</a>
+                  <a href="./jogo.html">Jogo</a>
                   <ul class="dropdown">
                       <li><a href="./SPlayer.html">Singleplayer</a></li>
                       <li><a href="./Mplayer.html">Multiplayer</a></li>
