non-centered combobox

--- a/jogo.html
+++ b/jogo.html
@@ -39,7 +39,18 @@
     <!--FIM NAVBAR-->
 
     <br>
-
+    <!--Center select div-->
+    <div class="container">
+    <div class="select">
+        <select id="standard-select">
+          <option value="Easy">Fácil</option>
+          <option value="Normal">Normal</option>
+          <option value="Hard">Difícil</option> 
+        </select>
+        <span class="focus"></span>
+      </div>
+    </div>
+    
     <div class="SpaceAround">
 
         <div class="RangeAndLabel">
