--- a/Mplayer.html
+++ b/Mplayer.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div class="container">
 <nav class="navbar">
     <ul class="nav-links">
         <!-- Para o móvel -->
@@ -35,6 +36,7 @@
     </ul>
 </nav>
 
+</div>
 </body>
 
 </html>
