--- a/forgot.html
+++ b/forgot.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<div class="container">
 <nav class="navbar">
     <ul class="nav-links">
         <!-- Para o móvel -->
@@ -49,12 +49,13 @@
                 
                 <a class="submit">Enviar</a>
                 <br> <br> <br>  
-                <p ><a href="login.html">Login</p>
+                <p ><a href="login.html">Login</a></p>
                 <br> <br>  
-                
+            </form>
+
         </div>
 
-
+</div>
 </body>
 
 </html>
