--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ mask-repeat: false;
         </head>
     <body><!--NavBar Tutorial: https: //www.makeuseof.com/responsive-navigation-bar-using-html-and-css/
     -->
+    <div class="container">
         <nav class="navbar">
             <ul class="nav-links">
                 <!-- Para o móvel -->
@@ -102,7 +103,7 @@ mask-repeat: false;
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
         </iframe>
-
+    </div>
     </body>
 
 
