--- a/info.html
+++ b/info.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<div class="container">
     <!--NAVBAR-->
     <nav class="navbar">
         <ul class="nav-links">
@@ -58,7 +59,7 @@
         <source src="assets/audio/01. BG Cave.mp3" type="audio/mpeg">
     </audio>
 
-
+</div>
 </body>
 
 </html>
