--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<div class="container">
 <nav class="navbar">
     <ul class="nav-links">
         <!-- Para o móvel -->
@@ -46,13 +46,14 @@
             <br> <br><br>
             <a class="submit">Entrar</a>
             <br> <br> <br> 
-            <p ><a href="forgot.html">Esqueceste-te da Password?</p>
+            <p ><a href="forgot.html">Esqueceste-te da Password?></a> </p>
             <br> <br>  
             <p >
                <a style="color: black;" >  Ainda não tens uma conta?  </a><br>
                 <a href="registar.html"> Registar </a>
             </p>
             <br>
+        </form>
     </div>
 
     <!--
@@ -70,7 +71,7 @@
     <p> <a href="jogo.html"> Jogar </a> </p>
     <input type="submit" value="Entrar">-->
 
-
+</div>
 </body>
 
 </html>
