--- a/registar.html
+++ b/registar.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<div class="container">
 
 <nav class="navbar">
     <ul class="nav-links">
@@ -57,24 +58,10 @@
                 <a href="login.html"> Login </a>
             </p>
             <br>
+        </form>
     </div>
 
-    <!--
-    <div id="coisadelogin">
-        <label for="Username">Username:
-        </label>
-        <input type="text" id="username" name="username">
-    </div>
-    <div id="coisadelogin2">
-        <label for="pass">Palavra-Passe (mínimo 6 caracteres): 
-        </label>
-        <input type="password" id="pass" name="password" minlength="6" required>
-    </div>
-    <p> <a href="newUser.html"> Criar Conta </a> </p>
-    <p> <a href="jogo.html"> Jogar </a> </p>
-    <input type="submit" value="Entrar">-->
-
-
+</div>
 </body>
 
 </html>
