--- a/jogo.html
+++ b/jogo.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<div class="container">
     <!--NAVBAR-->
     <nav class="navbar">
         <ul class="nav-links">
@@ -103,6 +104,9 @@
         <div class="label">
             Número de Bombas
         </div>
+
+    </div>
+</div>
 </body>
 
 </html>
