--- a/score.html
+++ b/score.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div class="container">
   <!--NAVBAR-->
   <nav class="navbar">
       <ul class="nav-links">
@@ -65,6 +66,7 @@
 
     </tr>
 </table>
+</div>
 </body>
 
 </html>
