--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
                   </div>
               </ul>
           </nav>
-
-      <h1> Bem-vindo! </h1>
+<br>
+      <h1> Bem-vindo! </h1><br>
       <div class = "quote">
               <blockquote>
                   <p> Admit it. None of us know how to play Minesweeper.
                       We just click randoms boxes and hope for the best.</p>
               </blockquote>
 
-      </div>
-      <p> Nesta página vais encontrar as <a href="./info.html">regras</a> de como jogar Minesweeper! </p>
-      <p> Tens a possibilidade de jogar individualmente ou desafiar alguém para jogar contigo! </p>
-      <p> Do que estás à espera?? </p>
+      </div><br><br>
+      <p> Nesta página vais encontrar as <a style="color: #00ADB5;" href="./info.html">regras</a> de como jogar Minesweeper! </p>
+      <p> Tens a possibilidade de jogar individualmente ou desafiar alguém para jogar contigo! </p><br>
+      <p> Do que estás à espera?? </p><br>
       <!--Botão para jogar -->
     <div style="text-align:center">
         <button class="button test" onclick="window.location.href='jogo.html'">Bora lá!!</button>
-    </div>
+    </div><br>
 
     <!--
     <div class="gallery">
