--- a/info.html
+++ b/info.html
@@ -55,17 +55,17 @@
     <br>
     <div class="row">
         <div class="column">
-          <img src="assets/images/tt1.png" style="width:25%">
+          <img alt = "explicação do 1" src="assets/images/tt1.png" style="width:25%">
           <br>
           <a>O 1 toca em 1 quadrado,<br> logo é uma mina.</a>
         </div>
         <div class="column">
-          <img src="assets/images/tt2.png" style="width:25%">
+          <img alt = "explicação do 2" src="assets/images/tt2.png" style="width:25%">
           <br>
           <a>O 2 toca 2 quadrados, <br> por isso ambos são minas.</a>
         </div>
         <div class="column">
-          <img src="assets/images/tt3.png" style="width:25%">
+          <img alt = "explicação do 3" src="assets/images/tt3.png" style="width:25%">
           <br>
           <a>O 3 toca 3 quadrados, <br>por isso todos são minas.</a>
         </div>
@@ -80,12 +80,12 @@
       <div class="row">
   
         <div class="column2">
-          <img src="assets/images/tt4.png" style="width:25%">
+          <img alt = "exemplo de padrão 1-2-1" src="assets/images/tt4.png" style="width:25%">
           <br>
           <a>O padrão 1-2-1 têm 1 solução.</a>
         </div>
         <div class="column2">
-          <img src="assets/images/tt5.png" style="width:25%">
+          <img alt = "exemplo de padrão 1-2-2-1"src="assets/images/tt5.png" style="width:25%">
           <br>
           <a>O padrão 1-2-2-1 têm 1 solução.</a>
         </div>
