--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
             <br> <br><br>
             <a class="submit">Entrar</a>
             <br> <br> <br> 
-            <p ><a href="forgot.html">Esqueceste-te da Password?></a> </p>
+            <p ><a href="forgot.html">Esqueceste-te da Password?</a> </p>
             <br> <br>  
             <p >
                <a style="color: black;" >  Ainda não tens uma conta?  </a><br>
