--- a/Mplayer.html
+++ b/Mplayer.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Multi Player</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/navBar.css">
 </head>
 
 <body>
