--- a/SPlayer.html
+++ b/SPlayer.html
@@ -14,6 +14,7 @@
     </style>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/redher.css">
+    <link rel="stylesheet" type="text/css" href="./css/navBar.css">
     <meta charset="UTF-8">
     <title>Página Inicial</title>
 </head>
