--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    
     <head>
-      
+        <link rel="stylesheet" type="text/css" href="./css/navBar.css">
         <link rel="stylesheet" type="text/css" href="./css/style.css">
         <meta charset="UTF-8">
         <title>Página Inicial</title>
