--- a/jogo.html
+++ b/jogo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Jogo</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-  
+    <link rel="stylesheet" type="text/css" href="./css/navBar.css">
 </head>
 
 <body>
