--- a/registar.html
+++ b/registar.html
@@ -6,6 +6,7 @@
     <title>Registar</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/login.css">
+    <link rel="stylesheet" type="text/css" href="./css/navBar.css">
 </head>
 
 <body>
