--- a/SPlayer.html
+++ b/SPlayer.html
@@ -57,7 +57,10 @@
             <div class="grid-item">8</div>
             <div class="grid-item">9</div>
         </div>
-
+   
     </div>
+    <audio alt="easy" href="assets/audio/05 - Logic and Trick.mp3" controls> </audio>
+    <audio alt="medium" href="assets/audio/10 - Suspense.mp3" controls> </audio>
+    <audio alt="hard" href="assets/audio/08 - Pressing Pursuit _ Cornered.mp3" controls> </audio>
 </body>
 </html>
