--- a/SPlayer.html
+++ b/SPlayer.html
@@ -59,8 +59,8 @@
         </div>
    
     </div>
-    <audio alt="easy" href="assets/audio/05 - Logic and Trick.mp3" controls> </audio>
-    <audio alt="medium" href="assets/audio/10 - Suspense.mp3" controls> </audio>
-    <audio alt="hard" href="assets/audio/08 - Pressing Pursuit _ Cornered.mp3" controls> </audio>
+    <!--- <audio alt="easy" href="assets/audio/05 - Logic and Trick.mp3" controls type="audio/mpeg"> </audio>
+    <audio alt="medium" href="assets/audio/10 - Suspense.mp3" controls type="audio/mpeg"> </audio>
+    <audio alt="hard" href="assets/audio/08 - Pressing Pursuit _ Cornered.mp3" controls type="audio/mpeg"> </audio> -->
 </body>
 </html>
